--- a/1.css
+++ b/1.css
@@ -19,7 +19,7 @@
         height: 70px;
         background-color: rgba(9, 78, 38, 0.692);
         position: absolute;
-        width: 100%;
+        width: 98%;
         padding: 10px;
     }
     
@@ -149,4 +149,55 @@
         margin-top: 160px;
         flex-direction: column;
         align-items: stretch;
+    }
+    
+    .footer {
+        background-color: rgba(9, 78, 38, 0.692);
+        width: 101%;
+        height: 320px;
+        margin-top: 10px;
+        margin-left: -10px;
+        margin-bottom: -10px;
+        display: flex;
+        flex-direction: row;
+    }
+    
+    .footer-txt {
+        width: 250px;
+        padding: 1px 45px;
+        color: #fff;
+    }
+    
+    .txt1 {
+        margin-top: 10px;
+        width: 150px;
+    }
+    
+    .txt2 {
+        margin-top: 10px;
+    }
+    
+    .txt3 {
+        margin-top: 10px;
+    }
+    
+    .txt4 {
+        margin-top: 10px;
+    }
+    
+    .footer-txt {
+        text-align: right;
+        padding-right: 10px;
+    }
+    
+    .footer-txt li {
+        display: block;
+        padding: 0px;
+    }
+    
+    .footer-txt li a {
+        color: #fff;
+        text-decoration: none;
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 14px;
     }
