--- a/3.css
+++ b/3.css
@@ -43,81 +43,46 @@ a:hover {
     height: 50px;
     color: white;
     /*position: relative;
-                top: 20px;
-               left: 320px;*/
+    top: 20px;
+    left: 320px;*/
     display: inline-flex;
 }
 
 .dad {
-    width: 80%;
-    height: 1200px;
-    background-color: rgb(236, 236, 236);
     display: flex;
-    justify-content: center;
-    margin-left: 120px;
-    margin-top: 30px;
-    padding-top: 20px;
-    flex-wrap: wrap;
-}
-
-.para {
-    text-align: center;
-    font-size: 30px;
-    font-family: cursive;
-    font-weight: bold;
     width: 100%;
-}
-
-.up {
-    margin-left: 10px;
-    display: block;
+    height: 2200px;
+    background-color: white;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    margin-top:10px;
 }
 
 .one {
+    width: 31%;
+    height: 340px;
     background-color: white;
-    width: 380px;
-    height: 150px;
-    border: 0.1px solid rgb(173, 171, 171);
-    display: inline-flex;
-    padding: 10px;
+    display: flex;
+    margin-top: 10px;
+    margin-right: 20px;
+    flex-wrap: wrap;
+    justify-content: flex-end;
 }
 
-.two {
-    background-color: white;
-    width: 380px;
-    height: 150px;
-    border: 0.5px solid rgb(173, 171, 171);
-    display: inline-flex;
-    padding: 10px;
+.news {
+    height: 180px;
+    width: 100%;
 }
 
-.atn {
-    width: 810px;
-    display: block;
-    align-self: center;
+.para {
+    font-size: 25px;
+    font-weight: bold;
+    text-align: right;
 }
 
-span {
-    position: relative;
-    top: 50px;
-    left: 150px;
-}
-
-.sh {
-    width: 20px;
-    height: 20px;
-}
-
-.t3b {
-    position: relative;
-    left: -50px;
-    top: 20px;
-}
-
-.t3ban {
-    position: relative;
-    top: 60px;
-    left: -101px;
+a {
+    cursor: pointer;
+    width: 100%;
 }
 
 .footer {
